# backend_search

./: .env.example  .env.researcher  .gitignore  ANSWER_TO_YOUR_QUESTION.md  ASSISTANT_INTEGRATION.md  CODE_LOCATION_REFERENCE.md  COPILOT-WORKSPACE.md  Dockerfile  PER_FILE_CAP_EXPLANATION.md  PER_FILE_CAP_INDEX.md  PER_FILE_CAP_VISUAL_SUMMARY.txt  Procfile  README.md  REVERT_af74f78a557b975b95f5680ad42f0e17cccc3331.md  Recommended_RAG_Limits_for_GPT-5__OpenAI_API_.csv  Supabase Snippet Fetch Document Chunks by Content.csv  Supabase Snippet Retrieve File Item Details.csv  assistant_action_openapi.json  assistant_functions.json  assistant_functions_ui_blocks.txt  assistant_instructions.md  assistant_system_instructions.md  check_chunks.py  check_metadata_column.py  check_ordinances.py  document_index_sample.json  generate_real_index.py  ingestion_instructions.md  llama_server.py  openapi.json  precache_model.py  project.py  pyproject.toml  readme  remote_schema.sql  requirements.txt  run_gdrive_sync.py  run_gdrive_sync_responses.py  run_worker.py  schema.sql  (+9 more)
.github/: copilot-instructions.md
app/: __init__.py  embed_api.py  main.py
app/Misc/: GPT-5_Prompting_and_RAG_Guide.txt
app/api/: __init__.py  background_ingest.py  background_ingest_v2.py  background_tasks.py  behavior.py  chat.py  chunk.py  embed.py  health.py  ingest_unprocessed  ingest_unprocessed.py  match_project_context.py  memory_client.py  project.py  propose_behavior_change.py  recall_memory.py  router_brain.py  search.py  search_memory.py  session_log.py  smart_memory.py  store_memory.py  trait.py  upload.py
app/api/Responses/: router.py  (+3 more)
app/core/: answer_builder.py  config.py  conversation.py  document_profiler.py  extract_text.py  llama_query_transform.py  llm_answer_extraction.py  log_writer.py  logger.py  logging_config.py  openai_async_client.py  openai_client.py  prompting.py  query_understanding.py  search_client.py  stopwatch.py  supabase_client.py  token_utils.py
app/services/: file_processing_service.py
app/tasks/: chunk_and_embed_logs.py  search_worker.py  sync_gdrive_task.py
app/workers/: main_worker.py
common/: config.py  utils.py
local_dev/: README.md  precache_model.py  run_gdrive_sync.py  run_gdrive_sync_responses.py  run_worker.py  start.sh
scripts/: backfill_file_workspaces_metadata.py  railway-sync.ps1  vs-health-check.py
semantic_service/: main.py  pgvector_search.py  supabase_connector.py
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20251023192240_set_storage_policies.sql  20251023201000_create_get_all_file_names_function.sql  20251023202000_update_function_security.sql  20251023223000_fix_get_all_file_names_column.sql  20251024002429_remote_schema.sql  20251024013000_add_ingested_column_to_files.sql  20251024020000_update_get_all_files_function.sql  20251024030000_add_ocr_status_to_files.sql  20251024040000_add_ocr_needed_and_path.sql  20251024050000_add_ocr_error_column.sql  20251024051500_add_section_header_and_page_number_to_chunks.sql  20251024052000_update_embedding_dimensions.sql  20251024060000_add_metadata_column_to_chunks.sql  20251024070000_create_match_documents_v3_functions.sql  20251107200000_add_ingestion_retries.sql  (+2 more)
tests/: conftest.py  test_assistant_api.py  test_responses_ingest.py  test_v2_chat.py  test_v2_research.py
(+56 files in other folders)
