[project]
name = "backend_search"
version = "0.0.1"
description = "Ingestion + Vector Store backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "supabase==2.5.0",  # pinned to version that relaxes httpx constraint to allow proxy kwarg
  "httpx>=0.27,<0.29",  # ensure httpx includes 'proxy' kwarg but stays below 0.29 pending upstream validation
  "openai==2.7.1",  # aligned with local SDK
  "pydantic",
  "pymupdf",  # for fitz (PyMuPDF) PDF text extraction
  "pdfplumber",  # alternate PDF extraction path
  "pytesseract",  # lightweight OCR fallback for pages
  "pdf2image",  # convert PDF pages to images for pytesseract
  "ocrmypdf",
  "pypdf",
  "python-docx",  # DOCX parsing used by extract_text
  "pillow",  # imaging backend for pdf2image/pytesseract
  "requests",
  "tiktoken",
  "numpy",
  "aiofiles",
  "python-dotenv",
  "python-multipart",
  "google-api-python-client",
  "google-auth-httplib2",
  "google-auth-oauthlib"
]

[tool.uv]
# Development/test extras (installed with `uv sync --dev`)
dev-dependencies = [
  "pytest",
  "pytest-asyncio",
  "httpx",  # for test client usage; not pinned unless needed
  "black",
  "mypy"
]

[tool.uv.sources]
# (Optional) Local path overrides could be added here if you want to develop against sibling SDK repos.
# Example (commented):
# openai = { path = "../openai-python" }

[tool.uv.export]
# Configure export format if we choose to generate requirements.txt for legacy tooling.
format = "requirements-txt"
include-hashes = false

[tool.pytest.ini_options]
pythonpath = ["app"]
asyncio_mode = "auto"

[tool.black]
line-length = 100

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
